# tinyply

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  cube.cpp  utils.h
include/tinyply/: reader.h  tinyply.h  writer.h
include/tinyply/impl/: data_buffer.h  element.h  file_in.h  file_out.h  header.h  misc.h  property.h  types.h  user_data.h
source/: CMakeLists.txt  tinyply.cpp
tests/: CMakeLists.txt  tests.cpp
